web: fix css for timezone when dark mode
The default color for this is black but when
changing to the dark theme this will because more
grey which is very hard on the eyes to see on a
dark background.

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -40,8 +40,9 @@ a.refresh {
 }
 
 .zuul-select-tz {
-    /* That's the color PF4 uses for the dropdown items in the navbar */
-    color: var(--pf-global--Color--dark-100);
+    /* Always use black because when using dark mode the theme will default
+       to another dark color which is hard to see on a white background */
+    color: #000;
 }
 
 /* Config error modal */
